tests/ui/borrowck/option-inspect-mutation.stderr
error[E0594]: cannot assign to `a.a`, which is behind a `&` reference
  --> $DIR/option-inspect-mutation.rs:9:9
   |
LL |         a.a += 123;
   |         ^^^^^^^^^^ `a` is a `&` reference, so it cannot be written to

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
